<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:layout_gravity="bottom"
    android:paddingHorizontal="12dp"
    android:paddingVertical="10dp"
    tools:background="@color/black">

    <TextView
        android:id="@+id/tvWaitingGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_button_black20_corners"
        android:gravity="center"
        android:text="@string/waiting_game_start"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tvYourOutVote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_button_black20_corners"
        android:gravity="center"
        android:text="@string/your_out_vote"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tvMyWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_words"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tvOtherPlayerSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_black20_corners"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:text="@string/other_user_speaking"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvYourOutSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_black20_corners"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/your_out"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUserSpeak"
        android:layout_width="104dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_button_7a5_corners"
        android:gravity="center"
        android:text="@string/start_speak"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <LinearLayout
        android:id="@+id/layoutUserVote"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvUserVoteTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_tip1"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutVoteContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUserNo1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_button_7a5_corners"
                android:gravity="center"
                android:minWidth="56dp"
                android:padding="0dp"
                android:text="@string/number1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
