<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_create_room"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/create_room"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSwitchLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        android:layout_marginEnd="20dp"
        android:src="@drawable/icon_zh_to_en"
        android:padding="5dp"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/tvChooseScene"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="148dp"
        android:text="@string/choose_scene"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutScene"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvChooseScene">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAiPartner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_button_selector"
            android:text="@string/game_ai_partner"
            android:textColor="#040925"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStayTuned"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/bg_button_selector"
            android:text="@string/stay_tuned"
            android:textColor="#040925"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/nickname"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutScene" />

    <TextView
        android:id="@+id/tvNicknameRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/random"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/icon_random"
        android:layout_marginEnd="32dp"
        android:drawablePadding="3dp"
        app:layout_constraintTop_toBottomOf="@id/layoutScene" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNickname"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_default"
        android:hint="@string/enter_nickname"
        android:maxLength="12"
        android:maxLines="1"
        android:paddingStart="18dp"
        android:paddingEnd="36dp"
        android:gravity="center_vertical"
        android:textColor="#040925"
        android:textColorHint="#756C92"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNickname" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnterRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="44dp"
        android:text="@string/enter_room"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:background="@drawable/bg_enter_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
